tests/fixtures/invalid/float_2_args.py
# float() takes at most 1 argument, got 2
x = float(1, 1)
